add comment to spatial clustering results

--- a/spatial_clustering.ipynb
+++ b/spatial_clustering.ipynb
@@ -964,6 +964,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0f7d0e0-2312-4c90-91b0-14e30423354f",
+   "metadata": {},
+   "source": [
+    "The resulting clusters were assigned the colors based on the mean values of the points in the cluster, where the darker the green, the higher the mean. With that, the clusters with the darkest shade of green might represent the young reed as it has large values overall indicating high water content. The slightly lighter green is likely attributed to old reed, since these clusters are still covering large cohesive areas but exhibit lower values overall. The lightest (or lightest two colors depending on the number of resulting clusters) are sporadically spread out across the area, covering smaller chunks at a time, and have very low or negative values representing the broken or inundated reed. Lastly, it is important to note that the yearly development of the reed can be observed through the changes in the areas and their membership at the given clusters, like young reed eventually becoming old, or broken reed replaced by young reed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcc74e50-f245-4327-b2ec-2e57c4af5ca1",
    "metadata": {},
    "source": [
@@ -1065,37 +1073,6 @@
    "source": [
     "pd.DataFrame(metrics).pivot(index=[\"index\", \"n_clusters\"], columns=[], values=[\"inertia\", \"silhouette_score\"]).groupby([\"index\", \"n_clusters\"]).mean()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "052b7246-e4ab-46f8-a5f3-2163aecd29e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5832805, 1)\n",
-      "(5832805, 1)\n",
-      "(5832805, 1)\n",
-      "(5832805, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for [t, arr] in ndmi_per_year.items():\n",
-    "    print(arr.reshape((arr.shape[1]*arr.shape[2], 1)).shape)\n",
-    "    # print(arr.shape[1] + arr.shape[2] + arr.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d934c77b-031b-48d0-99fa-0773ca162cf3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
